# TuxRacer1_1_ModernLinux

./: Cargo.toml  README.md  setup.sh
.cargo/: config.toml
src/: exports.rs  lib.rs  make_mesa_happy.rs  stub_defs.h  type_defs.rs  window.rs  xcb.rs
src/backend/: mod.rs
src/backend/drm/: mod.rs
src/backend/wayland/: compositor.rs  fifo.rs  keyboard.rs  mod.rs  pointer.rs  registry.rs  seat.rs  surface.rs  xdg.rs  zxdg.rs
src/egl/: ffi.rs  mod.rs
