[package]
name = "SDL-1_2"
version = "0.1.0"
edition = "2024"

[dependencies]
gl = "0.14.0"
lazy_static = "1.5.0"
libc = "0.2.177"
libloading = "0.8.0"
parking_lot = "0.12.5"
tempfile = "3.23.0"
wayland-client = "0.31.11"
wayland-egl = "0.32.8"
wayland-protocols = { version = "0.32.9", features = ["client", "staging", "unstable", "wayland-client"] }
wayland-sys = { version = "0.31.7", features = ["client", "dlopen"] }
xkbcommon-rs = "0.1.2"
xkeysym = "0.2.1"

[lib]
crate-type =["cdylib"]
